# item_description

./: CMakeLists.txt  README.md  package.xml
meshes/item/: item_profile_8_40x40_light_natural.dae
urdf/item/: item_profile.xacro
